k8s/gateway-api.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: devopswithai-gateway
  annotations:
    networking.gke.io/certmap: "devopswithai-map"
    networking.gke.io/frontend-config: "devopswithai-frontend-config"
spec:
  gatewayClassName: gke-l7-global-external-managed
  addresses:
  - type: NamedAddress
    value: devopswithai-ip
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
  - name: https
    protocol: HTTPS
    port: 443
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: devopswithai-route
spec:
  parentRefs:
  - name: devopswithai-gateway
  hostnames:
  - "devopswithai.in"
  - "www.devopswithai.in"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/search
    - path:
        type: PathPrefix
        value: /api/enroll
    backendRefs:
    - name: search-api-service
      port: 80
  - backendRefs:
    - name: devopswithai-service
      port: 80
